--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,6 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "skipLibCheck": true,
-    "baseUrl": "./src",
-    "paths": {
-      "~/*": ["./*"]
-    }
+    "baseUrl": "./src"
   },
 }
